Upgrade to Grails 2.5.1: GUI fixes